--- a/Login/styles.css
+++ b/Login/styles.css
@@ -34,8 +34,8 @@ body {
     background-color: rgba(255, 255, 255, 0.4);
     backdrop-filter: blur(40px);
     padding: 30px 40px;
-    width: 55%;
-    border-radius: 20px 0 0 20px;
+    width: 55%; /* Ajustar para caber melhor no layout */
+    border: 3px solid #D9A5F6; /* Borda roxa */
 }
 
 .img-box {
@@ -47,12 +47,15 @@ body {
         padding: 20px; /* Ajuste o padding conforme necessário */
         border-radius: 0 20px 20px 0;
         overflow: hidden; /* Garante que nada da imagem ultrapasse o contêiner */
+        border-color: #9400D3;
 }
 
 .img-box img {
     max-width: 100%;
     height: auto;
-    border-radius: 0 20px 20px 0; 
+    border-radius: 0 20px 20px 0;
+    border-color: #9400D3;
+
 }
 
 .form-box h2 {
