--- a/Login/styles_adm.css
+++ b/Login/styles_adm.css
@@ -34,8 +34,8 @@ body {
     background-color: rgba(255, 255, 255, 0.4);
     backdrop-filter: blur(40px);
     padding: 30px 40px;
-    width: 55%;
-    border-radius: 20px 0 0 20px;
+    width: 55%; /* Ajustar para caber melhor no layout */
+    border: 3px solid #D9A5F6; /* Borda roxa */
 }
 
 .img-box {
