--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,6 @@ a {
   text-decoration: none;
 }
 
-img { height: auto; }
 
 button {
   background: none;
@@ -204,12 +203,7 @@ body {
   cursor: pointer;
 }
 
-.img-cover {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  cursor: pointer;
-}
+
 
 .has-scrollbar {
   display: flex;
@@ -251,6 +245,30 @@ body {
 }
 
 .w-100 { width: 100%; }
+
+.user-info {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Espaçamento entre o nome e o botão */
+}
+
+.nome {
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.action-btn {
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+
 
 
 
@@ -400,13 +418,12 @@ body {
   #CATEGORY
 \*-----------------------------------*/
 
+
+
 .category-card .card-banner {
   border-radius: var(--radius-10);
   cursor: pointer;
 }
-
-
-.category-card .img-cover { transition: var(--transition-2); }
 
 .category-card:is(:hover, :focus-within) .img-cover { transform: scale(1.08); }
 
