--- a/cadastrar.css
+++ b/cadastrar.css
@@ -51,7 +51,7 @@ body {
     backdrop-filter: blur(40px);
     padding: 30px 40px;
     width: 55%; /* Ajustar para caber melhor no layout */
-    border-radius: 0 20px 20px 0;
+    border: 3px solid #EBBF7E; /* Borda roxa */
 }
 
 .form-box h2 {
